--- a/css/main.css
+++ b/css/main.css
@@ -1,170 +1,72 @@
-.flexbox-container {
-  display: -ms-flex;
-  display: -webkit-flex;
-  display: flex;
+.profile #item-nav,
+.profile #sidebar {
+  display: none !important;
 }
 
-.flexbox-container > div:first-child {
-  width: 70%;
-  padding: 10px;
-}
-
-.flexbox-container > div:last-child {
-  padding: 10px;
-}
-
-.flexbox-container > div:first-child {
-  margin-right: 20px;
-}
-
-.bp-widget.profile > div {
-  padding: 5px;
-  margin: 5px 0;
-  border: 1px solid black;
-}
-
-.page-header {
-  display: none;
-}
-
-#item-header #item-buttons {
-  margin-top: 1em;
-}
-#item-header #item-header-avatar img.avatar {
-  border-radius: 50%;
-}
-#item-header #item-header-content {
-  margin: 2em 0;
-  display: flex;
+.profile #content {
+  float: none;
   width: 100%;
 }
-#item-header #item-header-content #item-main {
-  flex: 3;
+
+.profile #item-header {
+  display: flex;
 }
-#item-header #item-header-content #item-meta {
+
+.profile #item-header-avatar {
   flex: 1;
-  text-align: right;
 }
-#item-header .generic-button {
-  display: inline;
+
+.profile #item-header-avatar .avatar {
+  float: none;
+  margin: 0;
+}
+
+.profile #item-header #item-header-content {
+  display: flex;
+  flex: 4;
+  margin: 0 1em;
+}
+
+.profile #item-main {
+  flex: 1;
   margin-left: 1em;
 }
 
-#content {
-  display: flex;
-}
-#content form {
-  width: 100%;
-}
-#content form .flex-wrap {
-  display: flex;
-}
-#content .left {
-  flex: 1;
-}
-#content .right {
-  flex: 2;
-  margin-left: -1em;
-}
-#content .left h4,
-#content .right h4 {
+.profile #item-main h4 {
   margin-top: 0;
 }
-#content .left .recent-commons-activity div,
-#content .right .recent-commons-activity div {
-  padding: 5px 0 5px 50px;
-  background-position: center left;
-  background-repeat: no-repeat;
+
+.profile #item-meta {
+  flex: 1;
+  text-align: right;
 }
-#content .left .commons-groups ul,
-#content .left .commons-sites ul,
-#content .right .commons-groups ul,
-#content .right .commons-sites ul {
+
+.profile #item-meta #item-buttons {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-#content .left .commons-groups ul li,
-#content .left .commons-sites ul li,
-#content .right .commons-groups ul li,
-#content .right .commons-sites ul li {
-  display: inline;
-  margin-right: 1em;
-}
-#content .left .commons-groups ul li a,
-#content .left .commons-sites ul li a,
-#content .right .commons-groups ul li a,
-#content .right .commons-sites ul li a {
-  background-color: #ccc;
-  border-radius: 1em;
-}
-#content .left .commons-groups ul li a:hover,
-#content .left .commons-sites ul li a:hover,
-#content .right .commons-groups ul li a:hover,
-#content .right .commons-sites ul li a:hover {
-  text-decoration: none;
-  background-color: #999;
-}
-#content .left .commons-groups ul li span,
-#content .left .commons-sites ul li span,
-#content .right .commons-groups ul li span,
-#content .right .commons-sites ul li span {
-  padding: 0 .25em;
-  display: inline-block;
-}
-#content .left > div,
-#content .right > div {
-  margin: 1em;
-  padding: .5em;
-  background-color: #eee;
-  position: relative;
-}
-#content .left > div .visibility,
-#content .right > div .visibility {
-  position: absolute;
-  top: .5em;
-  right: .5em;
-}
-#content .left > div ul,
-#content .right > div ul {
-  margin-bottom: 0;
-}
-#content .left > div p,
-#content .right > div p {
-  margin-bottom: 0;
 }
 
-#public-personal-li {
-  display: none;
+.profile #profile-main {
+  display: flex;
 }
 
-.changed {
-  background-color: yellow !important;
+.profile #profile-main .left {
+  flex: 1;
 }
 
-#profile-edit-form .edit-action-bar {
-  background-color: yellow;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  text-align: center;
+.profile #profile-main .right {
+  flex: 1;
 }
-#profile-edit-form .edit-action-bar > div {
-  padding: 10px 20px;
+
+.profile #profile-main .left > div,
+.profile #profile-main .right > div {
+  padding: 0.5em 1em;
+  background-color: #fafafa;
 }
-#profile-edit-form .js-basic-multiple-tags {
-  width: 100%;
+
+.profile #profile-main .left > div {
+  margin: 1em 0.5em 1em 0;
 }
-#profile-edit-form .header-fields,
-#profile-edit-form .radio,
-#profile-edit-form label {
-  display: none;
-}
-#profile-edit-form .collapsed {
-  opacity: .5;
-}
-#profile-edit-form .collapsed .wp-editor-wrap {
-  display: none;
+
+.profile #profile-main .right > div {
+  margin: 1em 0 1em 0.5em;
 }
