--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,9 @@
   margin: 0 0 0.5em;
 }
 
+.profile .recent-commons-activity li:first-letter {
+  text-transform: capitalize;
+}
 
 /**
  * edit-specific styles
