--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,11 @@
 .profile-edit .js-basic-multiple-tags {
   width: 100%;
 }
+
+/**
+ * overrides for other plugins & themes
+ */
+
+.action .follow-button a.follow:before {
+  content: none;
+}
