--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #ccc;
+  background-color: #cc0033;
   text-align: center;
   z-index: 1;
 }
