preserve whitespace formatting in field output & consolidate rendering

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@
 
 .profile #profile-main .right > div {
   margin: 1em 0 1em 0.5em;
+  white-space: pre-wrap;
 }
 
 .profile #profile-main .left > div h4,
