--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,11 @@
  * edit-specific styles
  */
 
+.profile-edit #profile-main .left > div,
+.profile-edit #profile-main .right > div {
+  white-space: inherit;
+}
+
 .profile-edit .synced,
 .profile-edit .editable > label,
 .profile-edit #profile-main form .radio {
