--- a/css/boss.css
+++ b/css/boss.css
@@ -89,6 +89,11 @@
 
 @media screen and (max-width: 721px)  {
 
+  .profile #item-header #item-header-content #item-main {
+    left: 0;
+    top: 0;
+  }
+
   .profile #item-header #item-header-content #item-meta {
     position: relative;
   }
