--- a/css/boss.css
+++ b/css/boss.css
@@ -131,17 +131,17 @@ body.bp-user.is-mobile #buddypress div#item-header div#item-header-content {
   margin: 1em 0;
 }
 
-.profile ul {
+#profile-main ul {
   list-style-type: disc;
   padding-left: 20px;
   white-space: normal;
 }
-.profile ol {
+#profile-main ol {
   list-style-type: decimal;
   padding-left: 20px;
   white-space: normal;
 }
-.profile p {
+#profile-main p {
   margin-bottom: 1em;
   white-space: normal;
 }
