--- a/css/profile.css
+++ b/css/profile.css
@@ -241,7 +241,14 @@
 
 /* Bottom gradient (optional, but recommended)*/
 .dynamic-height-active .dynamic-height-wrap:before {
-  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,#fafafa 100%);
+  background: -moz-linear-gradient(270deg, rgba(250,250,250,0) 0%, rgba(250,250,250,1) 100%); /* ff3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(250,250,250,0)), color-stop(100%, rgba(250,250,250,1))); /* safari4+,chrome */
+  background: -webkit-linear-gradient(270deg, rgba(250,250,250,0) 0%, rgba(250,250,250,1) 100%); /* safari5.1+,chrome10+ */
+  background: -o-linear-gradient(270deg, rgba(250,250,250,0) 0%, rgba(250,250,250,1) 100%); /* opera 11.10+ */
+  background: -ms-linear-gradient(270deg, rgba(250,250,250,0) 0%, rgba(250,250,250,1) 100%); /* ie10+ */
+  background: linear-gradient(180deg, rgba(250,250,250,0) 0%, rgba(250,250,250,1) 100%); /* w3c */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fafafa', endColorstr='#fafafa',GradientType=0 ); /* ie6-9 */
+
   bottom: 0;
   content:'';
   height: 30px;
