--- a/css/boss.css
+++ b/css/boss.css
@@ -131,7 +131,7 @@ body.bp-user.is-mobile #buddypress div#item-header div#item-header-content {
   margin: 1em 0;
 }
 
-#profile-main .hideable ul {
+#profile-main .hideable:not('.core-deposits') ul {
   list-style-type: disc;
   padding-left: 20px;
   white-space: normal;
