restore style & allowed tags for hideable fields wrt custom types

--- a/css/profile.css
+++ b/css/profile.css
@@ -123,7 +123,8 @@
   margin: 0.5em 0 0;
 }
 
-.profile #profile-main .right .core-deposits {
+.profile #profile-main .right .core-deposits,
+.profile #profile-main .right .memberships {
   white-space: normal;
 }
 
