do not use normal white-space in memberships field, only CORE

--- a/css/profile.css
+++ b/css/profile.css
@@ -123,8 +123,7 @@
   margin: 0.5em 0 0;
 }
 
-.profile #profile-main .right .core-deposits,
-.profile #profile-main .right .memberships {
+.profile #profile-main .right .core-deposits {
   white-space: normal;
 }
 
