hide redundant field legends in edit mode

--- a/css/profile.css
+++ b/css/profile.css
@@ -66,6 +66,11 @@
   overflow: auto;
 }
 
+.profile #profile-main .left legend,
+.profile #profile-main .right legend {
+	display: none;
+}
+
 .profile #profile-main .left > div,
 .profile #profile-main .right > div {
   padding: 1em;
