--- a/css/profile.css
+++ b/css/profile.css
@@ -180,9 +180,14 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #cc0033;
+  background: rgba(0, 0, 0, 0.25);
   text-align: center;
   z-index: 1;
+}
+
+.profile-edit #profile-group-edit-submit,
+.profile-edit #cancel {
+	margin: 1em;
 }
 
 .profile-edit .academic-interests .description {
