--- a/css/profile.css
+++ b/css/profile.css
@@ -336,3 +336,14 @@
   }
 
 }
+
+.institutional-or-other-affiliation .select2-container .select2-selection--single {
+   height: 40px;
+}
+.institutional-or-other-affiliation .select2-container {
+   width: 100% !important;
+}
+
+.institutional-or-other-affiliation .buddyboss-select-inner {
+   display: none
+}
