Getting rid of the x that clears everything

--- a/css/profile.css
+++ b/css/profile.css
@@ -360,3 +360,7 @@
 .select2-container--default input[type="search"].select2-search__field {
     width: 100% !important;
 }
+
+.select2-selection__clear {
+    display:none;
+}
